from the localhost:3000 i added a new post button which directs you to the /cars page

--- a/app/views/public/all.html.erb
+++ b/app/views/public/all.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Body</th>
+    <th> Body</th>
   </tr>
   <tr>
   <% @cars.each do |car| %>
@@ -12,3 +12,5 @@
   </tr>
   <% end %>
 </table>
+<br><br>
+<a href="/cars">Click to Add new post</a>
